--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -67,9 +67,9 @@ a {
 }
 
 /* Logo */
-.logo a {
-  font-size: 24px;
-  font-weight: bold;
+.logo img {
+  max-height: 60px;
+  display: block;
 }
 
 .logo span {
